openmediavault (0.5.32) stable; urgency=low

  * Improve code to move grid rows via up/down toolbar buttons.
  * Simplify code to create the RRD graphs. Thanks to Solo0815 for the hint.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 17 Jan 2014 12:02:18 +0100

openmediavault (0.5.31) stable; urgency=low

  * Update locales.
  * Fix bug in WebGUI class OMV.window.Upload.
  * Mantis 0000949: IPv6 firewall - fix ICMP issue.
  * Mantis 0000950: Firewall rules editing - set correct rule number.
  * Mantis 0000951: Set strip_size_cache to 8192 via UDEV rule.
  * Mantis 0000952: Creating a Bond interface breaks /etc/network/interfaces.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 13 Jan 2014 01:18:37 +0100

openmediavault (0.5.30) stable; urgency=low

  * Update locales.
  * Fix ExtJS bug EXTJSIV-10029 introduced by Mantis 0000936, see
    http://www.sencha.com/forum/showthread.php?264958 for more information.
  * Mantis 0000937: Error opening FTP-transfer log.
  * Mantis 0000945: omv-minify consumes too much cpu. Disable omv-minify for
    the language dictionary file via OMV_I18N_MINIFY_JS_DICT_FILE="no" in
    /etc/default/openmediavault. Defaults to "yes".

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 08 Jan 2014 12:06:31 +0100

openmediavault (0.5.29) stable; urgency=low

  * Update locales.
  * Refactor JS overrides to prevent ECMAScript6 compatibility problems.
  * Mantis 0000936: Plugin-Section - Sortable Collums: sorting is not working
    across more than one side.
  * Mantis 0000940: Incorrect spelling.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 07 Jan 2014 12:13:39 +0100

openmediavault (0.5.28) stable; urgency=low

  * Update locales.
  * Mantis 0000930: Display additional columns in 'System - Updates' and
    'System - Plugins'. Bug http://www.sencha.com/forum/showthread.php?251392-4.1.3-Renderer-of-hidden-column-can-cause-undesired-effect
    seem to be fixed in ExtJS 4.2.2.